--- a/Proyecto/static/css/style.css
+++ b/Proyecto/static/css/style.css
@@ -1,5 +1,5 @@
 body{
-   background-image: url("/static/img/escuela-fondo.png");
+   background-image: url("/static/img/fondo.jpg");
    background-size: cover;
   }
 
