--- a/Proyecto/templates/inicio.html
+++ b/Proyecto/templates/inicio.html
@@ -8,63 +8,37 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.112.5">
-    <title>Colegio San Miguel Inicio</title>
+    <title>Colegio San Miguel</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
-
-<!-- <link href="/static/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
- <link rel="stylesheet" type="text/css" href="static/css/inicio.css" th:href="@{/css/index.css}">
+<link rel="stylesheet" type="text/css" href="static/css/inicio.css" th:href="@{/css/index.css}">
+<link href="/static/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
-
-<header class="modal-dialog text-center">>
-   <div class="container-fluid">
-    <nav class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
-      <nav class="navbar bg-body-tertiary">
-        <section>
+<section>
+  <div class="modal-dialog text-center">
+  <div class="col-sm-8 main-section">
+        <div class="modal-content">
           <div class="card" style="width: 18rem" >
-             <img src="..\static\img\Logo.png" width="120">
-             <div class="card-body">
-               <h5 class="card-title">ACCESO AL CAMPUS VIRTUAL</h5>
-               <p class="card-text">INGRESAR COMO:</p>
-             </div>
-             <div class="card-body">
-             <a class="padre" href="{{url_for('iniciopadre')}}"> Padre, Madre o Tutor </a>
-             <br>
-             <br>
-             <a class="Preceptor" href="{{url_for('iniciopreceptor')}}"> Preceptor </a>
-             </div>
-           </div>
-        <!-- si va a enviar datos al servidor use etiqueta form, si solo va a mostrar datos use la etiqueta article-->
-        <form>
-        </form>
-       
-       </section>
-         <a class="navbar-brand">
-            <p class="text-center">Colegio San Miguel.</p>  
-          </a>
-    </nav>
-   </div>
-</header>
-
-<!-- <section>
-   <div class="card" style="width: 18rem" >
-      <img src="..\static\img\Logo.png" width="120">
-      <div class="card-body">
-        <h5 class="card-title">ACCESO AL CAMPUS VIRTUAL</h5>
-        <p class="card-text">INGRESAR COMO:</p>
-      </div>
-      <div class="card-body">
-      <a class="padre" href="{{url_for('iniciopadre')}}"> Padre, Madre o Tutor </a>
-      <br>
-      <br>
-      <a class="Preceptor" href="{{url_for('iniciopreceptor')}}"> Preceptor </a>
+          <img src="/static/img/logo2.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">COLEGIO SAN MIGUEL</h5>
+            <p class="card-text">INGRESAR COMO:</p>
+          </div>
+          <div class="card-body">
+          <a href="{{url_for('iniciopadre')}}" class="btn btn-primary">PADRE, MADRE O TUTOR</a>
+            <br>
+          </div>
+          <div class="card-body">
+          <a href="{{url_for('iniciopreceptor')}}" class="btn btn-primary">PRECEPTOR</a>
+          </div>
+          <p class="mt-5 mb-3 text-body-secondary">© Colegio San Miguel 2023</p>
+        </div>
       </div>
     </div>
- si va a enviar datos al servidor use etiqueta form, si solo va a mostrar datos use la etiqueta article-->
- 
+  </div>
 
-</section> 
+</section>
 </body>
 </html>
